@@ -5,6 +5,9 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 Version 1.3.15+svn:
   * Language and translations
     * Updated translations: Filipino, German.
+  * Multiplayer
+    * Reloaded games are displayed in yellow (instead of green) in the game
+      list as they are also a kind of already running games.
 
 Version 1.3.15:
   * Language and translations
