@@ -6,10 +6,11 @@ Version 1.3.15+svn:
      lobby which is wrong in most cases (fixes bug #10882), the display
      of 'Reloaded game' is disabled for now because of the string freeze
    * Fixed MP saves loadind to choose correct human side (bug #10894)
+   * display reloaded games in yellow instead of green in the game list
+     as they are also a kind of already running games
  * miscellaneous and bug fixes:
    * Moved destruction of conditional object before the mutex. This should 
      fix random crash in network disconnect.
-
 
 Version 1.3.15:
  * language and i18n:
